# email-unsubscribe

./: .gitignore  LICENSE  package.json  renovate.json
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: callback_server.rs  mail.rs  main.rs
src/pages/: index.tsx
